--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.3.2",
+    "pouchdb-adapter-http": "^8.0.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-get-random-values": "^1.11.0",
+    "rxdb": "^15.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
